--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
     <div>
-        <p><a href="gamefiles/gamefiles.html">Random</a></p>
+        <p><a href="mainIndex/gamefiles/Randomgame.html">Random</a></p>
     </div>
 
 
