--- a/mainIndex/gamefiles/Randomgame.html
+++ b/mainIndex/gamefiles/Randomgame.html
@@ -34,31 +34,29 @@
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
 
 
-  <script src="../gamefiles/js/game.js" defer></script>
-  <link rel="stylesheet" href="../mainIndex/home/home.css">
+  <script src="../gamefiles/js/randomgame.js" defer></script>
+  <link rel="stylesheet" href="../home/home.css">
   <link rel="stylesheet" href="../gamefiles/css/game.css">
 
 </head>
 <body>
   <div id="header">
     <div class="header_logo">
-        <a href="../index.html"><img src="../pictures/logo.png"></a>
+        <a href="../../index.html"><img src="../pictures/logo.png"></a>
         <h1 class="main_txt"></h1>
     </div>
     
     <div class="table_of_contents">
         <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
             <p>_</p>
-        <p><a href="profile.html">Profile</a></p>
+        <p><a href="../Profile/profile.html">Profile</a></p>
         <div class="proile_picture">
             <img src="#">
         </div>
     </div>
-  </div>
+</div>
 
-  <p onclick="firstanswerclicked()" id="1">  </p>
-  <p onclick="secondanswerclicked()" id="2">  </p>
-  <p onclick="thirdanswerclicked()" id="3">  </p>
-  <p onclick="fourthanswerclicked()" id="4">  </p>
+
+
 </body>
 </html>
