--- a/mainIndex/LoginInfo/signup.html
+++ b/mainIndex/LoginInfo/signup.html
@@ -54,7 +54,7 @@
         </div>
     </div>
     <h1> Signup Here </h1>
-    <div id="formContainer2">
+    <div id="signUp">
         <div id="header"></div>
         <p>Email</p>
         <input type="email" placeholder="email" id="email">
