--- a/mainIndex/Profile/profile.html
+++ b/mainIndex/Profile/profile.html
@@ -33,7 +33,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-database.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
 
-
+    <script src="../Profile/js/profile.js" defer></script>
     <link rel="stylesheet" href="../home/home.css">
 </head>
 <body>
@@ -42,7 +42,6 @@
             <a href="../../index.html"><img src="../pictures/logo.png"></a>
             <h1 class="main_txt"></h1>
         </div>
-        
         <div class="table_of_contents">
             <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
                 <p>_</p>
@@ -53,9 +52,6 @@
         </div>
     </div>
     <h1>Name Placeholder</h1>
-    <div>
-
-    </div>
 
 </body>
 </html>
