--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
 
     <script src="home/home.js" defer></script>
+    <link rel="stylesheet" href="mainIndex/home/header.css">
     <link rel="stylesheet" href="mainIndex/home/home.css">
 </head>
 <body>
@@ -43,17 +44,18 @@
             <a href="index.html"><img src="mainIndex/pictures/logo.png"></a>
             <h1 class="main_txt"></h1>
         </div>
-    
         <div class="table_of_contents">
-            <p><a href="mainIndex/LoginInfo/login.html">Sign In/Out</a></p>
-                <p>_</p>
+            <p><a href="mainIndex/LoginInfo/login.html">Sign In/Out</a></p> 
             <p><a href="mainIndex/Profile/profile.html">Profile</a></p>
-            <div class="proile_picture">
+            <!-- <div class="proile_picture">
                 <img src="#">
-            </div>
+            </div> -->
         </div>
     </div>
-
+    <div id="bodyHeader">
+        <h1 class="bodyHeader_text">Welcome to Trivia Master</h1>
+        <p>Catagoires</p>
+    </div>
 
     <div>
         <p><a href="mainIndex/gamefiles/Randomgame.html">Random</a></p>
