--- a/mainIndex/LoginInfo/signup.html
+++ b/mainIndex/LoginInfo/signup.html
@@ -35,7 +35,7 @@
 
     <script src="js/signup.js" defer></script>
     <link rel="stylesheet" href="css/signup.css">
-    <link rel="stylesheet" href="../home/home.css">
+    <link rel="stylesheet" href="../home/header.css">
 </head>
 <body>
     <div id="header">
@@ -46,11 +46,10 @@
         
         <div class="table_of_contents">
             <p><a href="login.html">Sign In/Out</a></p>
-                <p>_</p>
             <p><a href="../Profile/profile.html">Profile</a></p>
-            <div class="proile_picture">
+            <!-- <div class="proile_picture">
                 <img src="#">
-            </div>
+            </div> -->
         </div>
     </div>
     <h1> Signup Here </h1>
