--- a/mainIndex/Profile/profile.html
+++ b/mainIndex/Profile/profile.html
@@ -34,7 +34,7 @@
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
 
     <script src="../Profile/js/profile.js" defer></script>
-    <link rel="stylesheet" href="../home/home.css">
+    <link rel="stylesheet" href="../home/header.css">
 </head>
 <body>
     <div id="header">
@@ -44,11 +44,10 @@
         </div>
         <div class="table_of_contents">
             <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
-                <p>_</p>
             <p><a href="profile.html">Profile</a></p>
-            <div class="proile_picture">
+            <!-- <div class="proile_picture">
                 <img src="#">
-            </div>
+            </div> -->
         </div>
     </div>
     <h1>Name Placeholder</h1>
