--- a/mainIndex/gamefiles/Randomgame.html
+++ b/mainIndex/gamefiles/Randomgame.html
@@ -35,7 +35,7 @@
 
 
   <script src="../gamefiles/js/randomgame.js" defer></script>
-  <link rel="stylesheet" href="../home/home.css">
+  <link rel="stylesheet" href="../home/header.css">
   <link rel="stylesheet" href="../gamefiles/css/game.css">
 
 </head>
@@ -48,11 +48,10 @@
     
     <div class="table_of_contents">
         <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
-            <p>_</p>
         <p><a href="../Profile/profile.html">Profile</a></p>
-        <div class="proile_picture">
+        <!-- <div class="proile_picture">
             <img src="#">
-        </div>
+        </div> -->
     </div>
 </div>
 
