--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </div>
     <div id="bodyHeader">
         <h1 class="bodyHeader_text">Welcome to Trivia Master</h1>
-        <p>Catagoires</p>
+        <p class="bodyHeader_catagory">Catagoires</p>
     </div>
 
     <div>
