--- a/mainIndex/gamefiles/Randomgame.html
+++ b/mainIndex/gamefiles/Randomgame.html
@@ -54,7 +54,14 @@
         </div> -->
     </div>
 </div>
-
+<p style="text-align: center;">'</p>
+<div id="buybtn">
+   <p style="text-align:center">
+      <a href="http://www.google.com" target="_blank">
+         <img src="https://static.vecteezy.com/system/resources/thumbnails/000/572/885/small_2x/vector61-193-01.jpg" border="0" />
+       </a>
+   </p>
+</div>
 
 
 </body>
