--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <p class="bodyHeader_catagory">Catagoires</p>
     </div>
 
-    <div>
-        <p><a href="mainIndex/gamefiles/Randomgame.html">Random</a></p>
+    <div id="gameButtons">
+        <a href="mainIndex/gamefiles/Randomgame.html"><button id = "randomButton">Random</button></a>
     </div>
 
 
