--- a/mainIndex/LoginInfo/signup.html
+++ b/mainIndex/LoginInfo/signup.html
@@ -53,18 +53,15 @@
         </div>
     </div>
     <h1> Signup Here </h1>
-    <div id="signUp">
-        <div id="header"></div>
-        <p>Email</p>
+    <div id="formContainer">
+        <div id="gameheader"></div>
         <input type="email" placeholder="email" id="email">
-        <p>Password</p>
         <input type="password" placeholder="password" id="password">
 
         <button onclick="signUp()" id="signUp"> Sign Up </button>
-
         
 
-        <a href="login.html">Back to Login</a>
+    <a href="login.html"><button id="signIn">Back to Login</button></a>
     </div>
     
 </body>
