--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 
     <div id="gameButtons">
         <a href="mainIndex/gamefiles/Randomgame.html"><button id = "randomButton">Random</button></a>
+        <a href="mainIndex/gamefiles/mathgame.html"><button id = "mathButton">Mathematics</button></a>
+        <a href="mainIndex/gamefiles/historygame.html"><button id = "historyButton">History</button></a>
+        <a href="mainIndex/gamefiles/animegame.html"><button id = "animeButton">Japanese Anime and Manga</button></a>
     </div>
 
 
