--- a/mainIndex/gamefiles/historygame.html
+++ b/mainIndex/gamefiles/historygame.html
@@ -34,9 +34,9 @@
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
 
 
-  <script src="../gamefiles/js/randomgame.js" defer></script>
+  <script src="../gamefiles/js/historygame.js" defer></script>
   <link rel="stylesheet" href="../home/header.css">
-  <link rel="stylesheet" href="../gamefiles/css/game.css">
+  <link rel="stylesheet" href="../gamefiles/css/historygame.css">
 
 </head>
   <body>
