--- a/mainIndex/gamefiles/mathgame.html
+++ b/mainIndex/gamefiles/mathgame.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Trivia Master/RandomGame</title>
+  <title>Trivia Master/MathGame</title>
 
     <!-- The core Firebase JS SDK is always required and must be listed first -->
     <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
@@ -34,26 +34,26 @@
     <script src="https://www.gstatic.com/firebasejs/8.8.1/firebase-auth.js"></script>
 
 
-  <script src="../gamefiles/js/randomgame.js" defer></script>
+  <script src="../gamefiles/js/mathgame.js" defer></script>
   <link rel="stylesheet" href="../home/header.css">
-  <link rel="stylesheet" href="../gamefiles/css/game.css">
+  <link rel="stylesheet" href="../gamefiles/css/mathgame.css">
 
 </head>
-  <body>
-    <div id="header">
-      <div class="header_logo">
-          <a href="../../index.html"><img src="../pictures/logo.png"></a>
-          <h1 class="main_txt"></h1>
-      </div>
-      
-      <div class="table_of_contents">
-          <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
-          <p><a href="../Profile/profile.html">Profile</a></p>
-          <!-- <div class="proile_picture">
-              <img src="#">
-          </div> -->
-      </div>
-  </div>
+<body>
+  <div id="header">
+    <div class="header_logo">
+        <a href="../../index.html"><img src="../pictures/logo.png"></a>
+        <h1 class="main_txt"></h1>
+    </div>
+    
+    <div class="table_of_contents">
+        <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
+        <p><a href="../Profile/profile.html">Profile</a></p>
+        <!-- <div class="proile_picture">
+            <img src="#">
+        </div> -->
+    </div>
+</div>
 
 
 </body>
