--- a/mainIndex/gamefiles/animegame.html
+++ b/mainIndex/gamefiles/animegame.html
@@ -36,7 +36,7 @@
 
   <script src="../gamefiles/js/animegame.js" defer></script>
   <link rel="stylesheet" href="../home/header.css">
-  <link rel="stylesheet" href="../gamefiles/css/animegame.css">
+  <link rel="stylesheet" href="../gamefiles/css/anime.css">
 
 </head>
   <body>
