--- a/mainIndex/LoginInfo/login.html
+++ b/mainIndex/LoginInfo/login.html
@@ -67,7 +67,7 @@
 
 
         <a href="#"><button id = "forgotPass">Forgot password?</button></a>
-        <a href="signup.html"><button id = "createAccount">Don't have an Account?</button></a>
+        <a href="signup.html"><button id = "createAccount">Don't have an Account? Create One!</button></a>
     </div>   
 
 </body>
