--- a/mainIndex/gamefiles/Randomgame.html
+++ b/mainIndex/gamefiles/Randomgame.html
@@ -39,21 +39,36 @@
   <link rel="stylesheet" href="../gamefiles/css/game.css">
 
 </head>
-  <body>
-    <div id="header">
-      <div class="header_logo">
-          <a href="../../index.html"><img src="../pictures/logo.png"></a>
-          <h1 class="main_txt"></h1>
-      </div>
-      
-      <div class="table_of_contents">
-          <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
-          <p><a href="../Profile/profile.html">Profile</a></p>
-          <!-- <div class="proile_picture">
-              <img src="#">
-          </div> -->
-      </div>
+
+<body>
+  <div id="header">
+    <div class="header_logo">
+        <a href="../../index.html"><img src="../pictures/logo.png"></a>
+        <h1 class="main_txt"></h1>
+    </div>
+    
+    <div class="table_of_contents">
+        <p><a href="../LoginInfo/login.html">Sign In/Out</a></p>
+        <p><a href="../Profile/profile.html">Profile</a></p>
+        <!-- <div class="proile_picture">
+            <img src="#">
+        </div> -->
+    </div>  
   </div>
+
+  <div id="MainSearch">
+    <div id="choose">
+      <div id="questiondifficulty">
+        <p>Difficulty:</p>
+        <input type="text" placeholder="easy, medium, hard" id="difficulty">
+
+      </div>
+      <button class="subButton">submit</button>
+
+    </div>      
+  </div>      
+  <div id="MainContent"></div>
+
 
 
 </body>
